--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -26,7 +26,7 @@ include::./log-correlation.asciidoc[]
 
 include::./performance-tuning.asciidoc[]
 
-include::.troubleshooting.asciidoc[]
+include::./troubleshooting.asciidoc[]
 
 include::./upgrading.asciidoc[]
 
