Apply suggestions from code review
Co-Authored-By: Brandon Morelli <bmorelli25@gmail.com>

--- a/docs/public-api.asciidoc
+++ b/docs/public-api.asciidoc
@@ -20,7 +20,7 @@ The API does not require explicit Agent initialization—agent initialization is
 [[implicit-initialization]]
 === Implicit agent initialization
 
-If you don't explicitly initialize the agent, it will be started with a default configuration. This means the Agent will read <<configuration,configuration settings>> from environment variables. If you don't set an environment variable, the Agent will use the default value. For example, the `ServerUrls` default is `http://localhost:8200`.
+If you don't explicitly initialize the agent, it will be started with a default component setup. This means the Agent will read <<configuration,configuration settings>> from environment variables. If you don't set an environment variable, the Agent will use the default value. For example, the `ServerUrls` default is `http://localhost:8200`.
 
 This implicit initialization of the agent happens on the first call on the `Elastic.Apm.Agent` class.
 
@@ -45,7 +45,7 @@ NOTE: In the case of ASP.NET Core, when you register the agent, the `UseElasticA
 
 [float]
 [[auto-instrumentation-and-agent-api]]
-=== Auto instrumentation in combination with the Public Agent API
+== Auto instrumentation in combination with the Public Agent API
 
 With the `Elastic.ApmAgent.Subscribe(params IDiagnosticsSubscriber[] subscribers)` method you can turn on auto instrumentation for supported libraries.
 
@@ -63,7 +63,7 @@ Some examples:
 
 [float]
 [[api-tracer-api]]
-=== Tracer API
+== Tracer API
 The tracer gives you access to the currently active transaction and it enables you to manually start a transaction.
 
 You can access the API by using the static property on the Agent: `Elastic.Apm.Agent.Tracer`.
